<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <!-- What this protection has done (Gecko's persisted ETP database),
         one quiet line above the controls. Hidden by
         TrackingStatusPreference until the DB has recorded something;
         fed by TrackingFragment.loadTrackingStatus. -->
    <com.solarized.firedown.settings.TrackingStatusPreference
        android:key="com.solarized.firedown.preferences.browser.tracking.status"
        android:selectable="false" />


    <com.solarized.firedown.settings.ui.RadioButtonPreference
        android:defaultValue="true"
        android:key="com.solarized.firedown.preferences.browser.tracking.default"
        android:title="@string/settings_enhanced_tracking_protection_standard_default_1"
        android:summary="@string/settings_enhanced_tracking_protection_standard_description_5"
        app:enabled="true"
        app:icon="@drawable/ic_shield_24" />


    <com.solarized.firedown.settings.ui.RadioButtonPreference
        android:defaultValue="false"
        android:key="com.solarized.firedown.preferences.browser.tracking.strict"
        android:title="@string/settings_enhanced_tracking_protection_strict"
        android:summary="@string/settings_enhanced_tracking_protection_strict_description_4"
        app:enabled="true"
        app:icon="@drawable/local_police_24" />


    <com.solarized.firedown.settings.ui.RadioButtonPreference
        android:defaultValue="false"
        android:key="com.solarized.firedown.preferences.browser.tracking.custom"
        android:title="@string/settings_enhanced_tracking_protection_custom"
        android:summary="@string/settings_enhanced_tracking_protection_custom_description_1"
        app:enabled="true"
        app:icon="@drawable/ic_shield_person_24" />


    <Preference
        android:key="com.solarized.firedown.preferences.browser.tracking.strip.list.nav"
        android:title="@string/settings_query_param_block_list"
        android:summary="@string/settings_query_param_block_list_description" />


</PreferenceScreen>
